--- a/akita.yml
+++ b/akita.yml
@@ -9,6 +9,7 @@ dependencies:
   - absl-py=0.9.0=py36_0
   - asciitree=0.3.3=py_2
   - astor=0.8.0=py36_0
+  - astropy=4.0.1.post1=py36h7b6447c_0
   - attrs=19.3.0=py_0
   - backcall=0.1.0=py36_0
   - bedtools=2.29.2=hc088bd4_0
@@ -18,8 +19,8 @@ dependencies:
   - bokeh=2.0.1=py36h9f0ad1d_0
   - bzip2=1.0.8=h516909a_2
   - c-ares=1.15.0=h7b6447c_1001
-  - ca-certificates=2020.4.5.1=hecc5488_0
-  - certifi=2020.4.5.1=py36h9f0ad1d_0
+  - ca-certificates=2020.1.1=0
+  - certifi=2020.4.5.1=py36_0
   - click=7.1.1=pyh8c360ce_0
   - cloudpickle=1.3.0=py_0
   - cooler=0.8.6=py_0
@@ -49,9 +50,11 @@ dependencies:
   - hdf5=1.10.4=hb1b8bf9_0
   - heapdict=1.0.1=py_0
   - htslib=1.9=ha228f0b_7
+  - hypothesis=5.8.3=py_0
   - icu=58.2=h9c2bf20_1
   - importlib_metadata=1.5.0=py36_0
   - intel-openmp=2020.0=166
+  - intervaltree=3.0.2=py_0
   - ipykernel=5.1.4=py36h39e3cac_0
   - ipython=7.13.0=py36h5ca1d4c_0
   - ipython_genutils=0.2.0=py36_0
@@ -92,6 +95,7 @@ dependencies:
   - mkl-service=2.3.0=py36he904b0f_0
   - mkl_fft=1.0.15=py36ha843d7b_0
   - mkl_random=1.1.0=py36hd6b4f25_0
+  - more-itertools=8.2.0=py_0
   - msgpack-python=1.0.0=py36hdb11119_1
   - multiprocess=0.70.9=py36h8c4c3a4_1
   - nbconvert=5.6.1=py36_0
@@ -101,7 +105,7 @@ dependencies:
   - numpy=1.18.1=py36h4f9e942_0
   - numpy-base=1.18.1=py36hde5b4d6_1
   - olefile=0.46=py_0
-  - openssl=1.1.1f=h516909a_0
+  - openssl=1.1.1f=h7b6447c_0
   - opt_einsum=3.1.0=py_0
   - packaging=20.1=py_0
   - pairix=0.3.7=py36h84994c4_0
@@ -115,12 +119,14 @@ dependencies:
   - pickleshare=0.7.5=py36_0
   - pillow=7.0.0=py36hb39fc2d_0
   - pip=20.0.2=py36_1
+  - pluggy=0.13.1=py36_0
   - prometheus_client=0.7.1=py_0
   - prompt-toolkit=3.0.4=py_0
   - prompt_toolkit=3.0.4=0
   - protobuf=3.11.4=py36he6710b0_0
   - psutil=5.7.0=py36h8c4c3a4_1
   - ptyprocess=0.6.0=py36_0
+  - py=1.8.1=py_0
   - pybedtools=0.8.1=py36he513fc3_0
   - pybigwig=0.3.17=py36hc013797_0
   - pyfaidx=0.5.8=py_1
@@ -129,6 +135,13 @@ dependencies:
   - pyqt=5.9.2=py36h05f1152_2
   - pyrsistent=0.16.0=py36h7b6447c_0
   - pysam=0.15.3=py36hda2845c_1
+  - pytest=5.4.1=py36_0
+  - pytest-arraydiff=0.3=py36h39e3cac_0
+  - pytest-astropy=0.8.0=py_0
+  - pytest-astropy-header=0.1.2=py_0
+  - pytest-doctestplus=0.5.0=py_0
+  - pytest-openfiles=0.4.0=py_0
+  - pytest-remotedata=0.3.2=py36_0
   - python=3.6.10=hcf32534_1
   - python-dateutil=2.8.1=py_0
   - python_abi=3.6=1_cp36m
